--- a/index.html
+++ b/index.html
@@ -6,4 +6,8 @@
 	<meta name="description" content="Página principal para el proyecto de Git">
 	<meta name="author" content="Programación Fácil">
 </head>
+
+<body>
+	Esto es una prueba de pagina web desde git local
+</body>
 <html>
